# qbx

./: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool  log
autom4te.cache/: output.22  output.26  requests  traces.1  traces.21  traces.22  traces.25  traces.26
data/: log  test-all
doc/: qbx.dxy
doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  formula.repository  group__base.html  group__laplace.html  group__location.html  group__quadrature.html  group__util.html  index.html  modules.html
doc/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  group__base.tex  group__laplace.tex  group__location.tex  group__quadrature.tex  group__util.tex  index.tex  modules.tex  refman.tex
doxy/: qbx.dxy
notes/: notes.aux  notes.tex
src/: Makefile  Makefile.am  Makefile.in  adapt.c  blas.c  documentation.c  documentation.c.in  doxy.txt  foreach.c  foreach.lo  koornwinder.c  laplace.c  libqbx.la  libsub_la-foreach.lo  libsub_la-qbx.lo  libsub_la-rules.lo  libsub_la-siegel.lo  location.c  qbx-config  qbx-config.in  qbx-private.h  qbx.c  qbx.h  qbx.lo  rules.c  siegel.c  siegel.lo  util.c
src/.deps/: adapt.Plo  blas.Plo  foreach.Plo  koornwinder.Plo  laplace.Plo  libsub_la-adapt.Plo  libsub_la-foreach.Plo  libsub_la-koornwinder.Plo  libsub_la-laplace.Plo  libsub_la-location.Plo  libsub_la-qbx.Plo  libsub_la-rules.Plo  libsub_la-siegel.Plo  libsub_la-util.Plo  location.Plo  qbx.Plo  rules.Plo  siegel.Plo  util.Plo
src/.libs/: libqbx-0.1.so.0  libqbx-0.1.so.0.0.0  libqbx.la  libqbx.lai
tests/: Makefile  Makefile.am  Makefile.in  qbx-tests  qbx-tests.c
tests/.deps/: qbx-tests.Po
